# Metal_Info_Backend_demo

./: .dockerignore  .gitignore  .pre-commit-config.yaml  API_DOCUMENTATION.md  Dockerfile  Guideline_For_implementation.md  Makefile  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini
docs/: API_DOCUMENTATION.md  FETCH_METAL_PRICES_REQUIREMENTS.md
src/config/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
src/metal_news/: __init__.py  admin.py  apps.py  signals.py  tasks.py
src/metal_news/api/: __init__.py
src/metal_news/api/v1/: __init__.py  serializers.py  services.py  urls.py  views.py
src/metal_news/migrations/: 0001_initial.py  __init__.py
src/metal_news/models/: __init__.py  keyword.py  metal_news.py
src/metal_news/tests/: __init__.py  conftest.py  test_keyword_views.py  test_keywords.py  test_models.py  test_services.py  test_views.py
src/metal_prices/: __init__.py  admin.py  apps.py
src/metal_prices/api/v1/: serializers.py  services.py  urls.py  views.py
src/metal_prices/migrations/: 0001_initial.py  __init__.py
src/metal_prices/models/: __init__.py  metal_price.py
src/metal_prices/tests/: conftest.py  factories.py  test_models.py  test_services.py
src/metal_prices/tests/api/v1/: test_views.py
src/shared/: mixins.py  models.py
src/shared/migrations/: __init__.py
